wp-content/themes/aaf/style.css
/* ... */
.site-footer .socialbtns {
    border-bottom: 1px solid rgba(255,255,255,.2)
}

    .site-footer .socialbtns li {
        margin-right: 2rem;
        margin-bottom: 20px;
    }

.site-footer input.field {
    background: #333;
    border-radius: 0;
    border: none;
    padding-left: 2rem;
}
    .icon-search {
        position: absolute;
        margin: .6rem 0 0 .5rem;
    }

img.map {
    margin-right: 1em;
}

.site-footer #searchform {
    margin-top: 20px;
}

.site-footer nav {
    margin-top: 1rem;
}

.site-footer nav > div, .site-footer ul {
    display: inline;
    margin-left: 0;
}

.site-footer .nav li {
    list-style: none;
    display: inline;
}

.site-footer  a:hover{
    color: #08c;
    text-decoration: underline;
}

.footer-menu {
    text-transform: uppercase;
}

.footer-menu li {
    padding-left: .6rem;
}

 .site-footer nav .footer-menu ul, .credits {
    float: right;
    padding-right: 30px;
    text-align: right;
}

.site-footer .nav li.menu-item-last span.sep {
    display: none;
}

.site-info{
    margin-left: 0;
}

/*front page only*/

.home.page .entry-header .entry-title {
    display: block;
    font-size: 1.75rem;
    font-family: 'VAGRoundedLight', Arial, Helvetica, sans-serif;
}

.home.page .entry-content {
    padding-left: 19.81rem;
}

/*Media queries*/
/*Larger modern laptops and desktops*/
@media (min-width: 1200px) {
    .site-title {
        font-size: 3.2rem;
        line-height: 3.5rem;
        padding-top: 3.6rem;
    }
}

/* older desktop, laptops and tablets. */
@media (min-width: 979px) {
    body {
        background: url('images/bg_large_screens.png') 0 0 repeat;
    }

    .logo {
        width: 220px;
        height: 180px;
        background: url('images/logo_large.png') 0 0 no-repeat;
        margin-top: -18px;
    }

    .utilitynav {
        background: #000;
        height: 45px;
        font-family: 'VAGRoundedLight', Arial, Helvetica, sans-serif;
        font-size: 1.2rem;
        text-transform: uppercase;
        letter-spacing: 1px;
        box-sizing: border-box;
    }

    .utilitynav a {
        display: block;
        width: 100%;
        height: 100%;
        color: #fff;
    }
        .utilitynav div {
            height: 100%;
            margin-left: auto;
            text-align: center;
            padding-top: .7rem;
            box-sizing: border-box;
        }

        .utilitynav a {
            -webkit-transition: all .2s ease-out;
            -moz-transition:    all .2s ease-out;
            -ms-transition:     all .2s ease-out;
            -o-transition:      all .2s ease-out;
            transition:         all .2s ease-out;
        }

        .utilitynav a:hover {
            padding-top: .35rem;
        }

        div.newsletter {
            background: #bcbdbf;
            color: #333;
            padding-top: .5rem;
        }
            .newsletter input[type="text"] {
                background: #333;
                color: #ccc;
                border-radius: 0;
            }
            .newsletter input::-webkit-input-placeholder {
               color: #fff;
               font-size: .7rem;
            }

            .newsletter input:-moz-placeholder { /* Firefox 18- */
               color: #fff;
               font-size: .7rem;  
            }

            .newsletter input::-moz-placeholder {  /* Firefox 19+ */
               color: #fff;
               font-size: .7rem;  
            }

            .newsletter input:-ms-input-placeholder {  
               color: #fff;
               font-size: .7rem;  
            }
        .donate {
            background: #BE2025;
        }
        .news {
            background: #000;
            padding-left: 35px;
        }

        .icon-news {
            color: #BE2025;
        }

    .site {
        padding-top: 1.0rem;
    }

    .site-title {
        font-size: 2.75rem;
        line-height: 3rem;
        text-align: right;
        color: #404041;
    }

    .content-wrap {
        background: #fff;
        padding: 1.5rem 0;
        box-sizing: border-box;
    }

    .site-header .menu-container {
        margin-bottom: 0;
    }

    .visible-desktop .site-navigation {
        background: #000;
    }

    /*Front page only*/
    .front-thumb {
        float: left;
        margin: 0 1rem 1rem 0;
    }

    .home.page .site-content > header {
        position: relative;
        margin-left: 18.75rem;
    }
}

@media (min-width: 979px) and (max-width: 1199px) {
    .front-thumb {
        margin: 0 1rem 1rem 0;
    }

    .home.page .site-content > header {
        margin-left: 0;
        width: 95%;
    }
}

/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) 
and (max-width: 979px) 
{ 
    #phonenav #navigation ul {
        width: auto;
    }
    #phonenav #navigation ul li {
        background: none;
        border-bottom: none;
        display: block;
        width: auto;
    }
    .home.page .site-content > header {
        position: relative;
        margin-left: 0;
        width: 95%;
    }

    .home.page .entry-content {
        padding-left: 0;
    }
}

/* Landscape phone to portrait tablet */
@media (max-width: 767px) { 

    .site-title {
        font-size: 1.0rem;
        padding-top: .4rem;
    }

    .home.page .site-content > header {
        position: relative;
        margin-left: 0;
        width: 95%;
    }
    
    .home.page .entry-content {
        padding-left: 0;
    }

    .nav-collapse .dropdown-menu {
        background-color: #fff;
    }
    .fc-event-title, .social-search, .map, ul#menu-sub-footer, .breadcrumbs-container {
        display: none;
    }

    .site-footer nav {
        margin-top: 0rem;
    }

    .site-footer nav .footer-menu ul, .site-info, .credits {
        margin: 0 auto;
       text-align: center;
    }
    .site-footer {
        height: 8.5rem;
    }

}
/* ... */

